[package]
name = "to"
version = "0.0.1"
authors = ["Jason Dixon <jason.dixon.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Choose one or the other
python2 = ["cpython/python27-sys", "cpython/extension-module-2-7"]
python3 = ["cpython/python3-sys", "cpython/extension-module"]

[lib]
name = "to"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
default-features = false
